# pinocchio_bullet

./: .gitignore  CMakeLists.txt  README.md  package.xml  readme.md  setup.py
demo/: quadruped.py
demos/: demo_simulate_a_robot.py  simulate_a_robot.py
demos/resources/: solo12.urdf
pinocchio_bullet/: wrapper.py
python/py_pinocchio_bullet/: wrapper.py
resource/: solo12.urdf
src/: py_pinocchio_bullet
src/pinocchio_bullet/: __init__.py  wrapper.py
