<?xml version="1.0"?>
<package>
  <name>pinocchio_bullet</name>
  <version>1.0.0</version>
  <description>pinocchio_bullet</description>
  <author email="jviereck@tuebingen.mpg.de">Julian Viereck</author>
  <maintainer email="jviereck@tuebingen.mpg.de">Julian Viereck</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
